fix: fix overlay z-index

--- a/rs-css/src/components/menu/menu.css
+++ b/rs-css/src/components/menu/menu.css
@@ -178,6 +178,7 @@ ul {
     right: 0;
     background-color: rgb(0, 0, 0);
     opacity: 0.3;
+    z-index: 1;
   }
 
 }
